<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#F5F5F5"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_rounded_white"
        android:padding="8dp">

        <ImageView
            android:id="@+id/btnPrevMonth"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_back"
            android:padding="8dp"
            app:tint="#5C7872"/>

        <TextView
            android:id="@+id/tvCurrentMonth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/month_date"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="@color/bg1"
            android:fontFamily="@font/poppins"/>

        <ImageView
            android:id="@+id/btnNextMonth"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_next"
            android:padding="8dp"
            app:tint="#5C7872"/>
    </LinearLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:tabIndicatorColor="#5C7872"
        app:tabSelectedTextColor="#5C7872"
        app:tabTextColor="#808080"
        android:layout_marginBottom="10dp">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_expense" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_income" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        android:layout_marginBottom="16dp">

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/barChart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"/>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="144dp"
        android:layout_marginBottom="0dp"
        android:background="@drawable/bg_rounded_green"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvIncome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0px"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/income_0"
            android:textColor="@color/bg2"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvExpense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/expense_0"
            android:textColor="@color/bg2"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="8dp"
            android:background="#FFFFFF" />

        <TextView
            android:id="@+id/tvBalance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/balance_0"
            android:textColor="@color/bg2"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>