<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.dangki"
    android:background="@color/bg2"
    android:id="@+id/FL4">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_marginTop="40dp">

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppinsregular"
        android:text="wellcome to"
        android:textColor="@color/bg1"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Meo Thần Tài"
        android:fontFamily="@font/baloo"
        android:textSize="45sp"
        android:textColor="@color/bg1"
        />
</LinearLayout>

    <ImageView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/meo2" />

    <LinearLayout
        android:layout_width="333dp"
        android:layout_height="500dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="270dp"
        android:background="@drawable/border"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/poppins"
            android:text="@string/signup_title"
            android:textColor="@color/bg2"
            android:textSize="35sp" />

        <ImageView
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginLeft="250dp"
            android:layout_marginTop="-60dp"
            android:src="@drawable/paws"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/username"
            android:textColor="@color/bg2"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/name1"
            android:layout_width="280dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/border2"
            android:fontFamily="@font/poppinsregular"
            android:hint="Nguyen Van A"
            android:paddingLeft="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppinsregular"
            android:text="Email"
            android:textColor="@color/bg2"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/email1"
            android:layout_width="280dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/border2"
            android:fontFamily="@font/poppinsregular"
            android:hint="hello@reallygreatsite.com"
            android:paddingLeft="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/password"
            android:textColor="@color/bg2"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/password1"
            android:layout_width="280dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/border2"
            android:ems="10"
            android:fontFamily="@font/poppinsregular"
            android:hint="******"
            android:inputType="textPassword"
            android:paddingLeft="20dp" />

        <Button
            android:id="@+id/next"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/bg2"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/continue_btn"
            android:textColor="@color/bg1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/have_account"
                android:textColor="@color/bg2" />

            <Button
                android:id="@+id/singin"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/bg1"
                android:fontFamily="@font/poppins"
                android:text="@string/btn_login"
                android:textColor="@color/bg2" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>