<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="view.thu"
    android:background="@color/bg2">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="30dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textColor="@color/bg1"
            android:textSize="18sp"
            android:fontFamily="@font/poppinsregular"
            android:layout_marginLeft="3dp"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="@drawable/border5"
            android:layout_marginLeft="15dp"
            >

            <ImageView
                android:id="@+id/btn_prev"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:padding="4dp"
                android:src="@drawable/icon2"/>

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="08/12/2025 (Th 2)"
                android:textSize="18sp"
                android:textColor="@color/bg1"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/poppinsregular"/>

            <ImageView
                android:id="@+id/btn_next"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:padding="4dp"
                android:src="@drawable/icon1" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="75dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/note"
            android:textSize="18sp"
            android:textColor="@color/bg1"
            android:fontFamily="@font/poppinsregular"
            android:layout_marginLeft="-3dp"
            />
        <EditText
            android:id="@+id/edtNote"
            android:layout_width="225dp"
            android:layout_height="35dp"
            android:background="@drawable/border5"
            android:layout_marginLeft="5dp"
            android:hint="......"
            android:paddingLeft="20dp"
            android:textColor="@color/bg1"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="120dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount_expense"
            android:textColor="@color/bg1"
            android:fontFamily="@font/poppinsregular"
            android:textSize="18sp"
            android:layout_marginLeft="13dp"/>

        <EditText
            android:id="@+id/edtAmount"
            android:layout_width="225dp"
            android:layout_height="35dp"
            android:background="@drawable/border5"
            android:layout_marginLeft="12dp"
            android:hint="0"
            android:paddingLeft="20dp"
            android:textColor="@color/bg1"
            android:inputType="number"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="  đ"
            android:textColor="@color/bg1"
            android:fontFamily="@font/poppinsregular"
            android:textSize="18sp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="165dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="13dp"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/category"
            android:textColor="@color/bg1"
            android:textSize="18sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvdanhmuc"
            android:layout_width="match_parent"
            android:layout_height="335dp"
            android:layout_gravity="center"
            tools:ignore="SpeakableTextPresentCheck" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:gravity="center">

            <Button
                android:id="@+id/btnSave"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/bg1"
                android:fontFamily="@font/poppinsregular"
                android:text="@string/btn_save_expense"
                android:textColor="@color/bg2"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>